Fixes #11 added instructions that users can click on blocks

--- a/app/styles/colors.scss
+++ b/app/styles/colors.scss
@@ -2,6 +2,7 @@ $blue: #82b8c8;
 $light-blue: rgba(130, 184, 200, .7);
 $light-blue-opaque: rgb(166, 205, 215);
 $lighter-blue: rgba(130, 184, 200, .4);
+$lighter-blue-opaque: rgb(204,226,232);
 $red: #ff0000;
 $light-red: rgba(255, 0, 0, .5);
 
