--- a/app/templates/code-snippet.hbs
+++ b/app/templates/code-snippet.hbs
@@ -1,5 +1,6 @@
 <div class="tutorial-container code-snippets-topic-type">
   <div class="code-snippets">
+  <div class="instructions">Click Scratch blocks for section in javascript code</div>
     {{#each snippet in codeSnippets }}
       {{#link-to 'code-snippet' snippet class="code-snippet"}}
         {{image-list snippet}}
