--- a/app/templates/topic-item.hbs
+++ b/app/templates/topic-item.hbs
@@ -1,5 +1,6 @@
 <div class="tutorial-container topic-items-topic-type">
   <div class="topic-items">
+  <div class="instructions">Click on the Scratch blocks to see javascript on the right.</div>
     {{#each item in topicItems }}
       {{#link-to 'topic-item' item class="topic-item"}}
         {{image-list item}}
