--- a/app/templates/content/code-snippets/-example1-glide-right.hbs
+++ b/app/templates/content/code-snippets/-example1-glide-right.hbs
@@ -1,5 +1,5 @@
 <div class="header">Program 1</div>
-<div class="sub-header">Click on the Scratch block to view its equivalent in Javascript</div>
+<div class="sub-header">Click on the Scratch block to see how it works in Javascript</div>
 <div>
 In scratch we use the glide Scratch block to animate the movement of the sprite to a new position.
 In Javascript we use the JQuery animate command to animate the movement of the sprite to a new position
