--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -92,7 +92,7 @@
     background: $blue;
   }
   &:first-of-type {
-   border-left: 2px solid $blue;
+    border-left: 2px solid $blue;
   }
 }
 
@@ -169,9 +169,13 @@ div.code-snippets {
 }
 .code-snippets-topic-type .stage {
   margin-left: 316px;
+  .header {
+    color: $blue;
+  }
 }
 
 .how-it-works {
+  position:relative;
   padding: 25px 22px;
   font-size: 13pt;
   line-height: 17pt;
@@ -181,12 +185,12 @@ div.code-snippets {
     margin: 0;
     padding-left: 20px;
   }
-  .header {
-    color: $light-red;
-    font-family: $font-header-style;
-    font-size: 13pt;
-    line-height: 17pt;
-  }
+}
+.header {
+  color: $light-red;
+  font-family: $font-header-style;
+  font-size: 13pt;
+  line-height: 17pt;
 }
 .code {
   padding: 25px 22px 0;
