--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -63,3 +63,37 @@ ic-modal-main {
     font-family: $font-normal-style;
   }
 }
+
+.detail-btn {
+  outline: none;
+  position: absolute;
+  bottom: 25px;
+  right: 20px;
+  background: none;
+  text-indent: -99999px;
+  height:0;
+  width: 0;
+  padding: 0;
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  border-top: 10px solid $blue;
+  border-bottom: 10px solid transparent;
+
+  &.expand {
+    bottom: 10px;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid $blue;
+  }
+}
+
+.instruction-container {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.5s linear;
+  -webkit-transition: max-height 0.5s linear;
+  -moz-transition: max-height 0.5s linear;
+
+  &.expand {
+    max-height: 1000px;
+  }
+}
