--- a/app/templates/code-snippet.hbs
+++ b/app/templates/code-snippet.hbs
@@ -8,8 +8,13 @@
     {{/each}}
   </div>
   <div class="stage">
+    
     <div class="how-it-works">
-      {{ partial codeSnippet.instructionPartial }}
+      <div class="header">{{codeSnippet.title}}</div>
+      <div {{ bind-attr class="showInstructionDetail:expand :instruction-container"}}>
+        {{ partial codeSnippet.instructionPartial }}
+      </div>
+      <button {{bind-attr class="showInstructionDetail:expand :detail-btn" }} {{ action "toggleDetail" }}>{{toggleDetailLabel}}</button>
     </div>
     <div class="code">
       {{#if codeSnippet.labUrl}}
