--- a/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
+++ b/app/templates/content/topic-items/-control-forever-loop-how-it-works.hbs
@@ -6,7 +6,4 @@
 It will continue doing whatever is inside the loop until it is false.</li>
 <li>As long as the word inside the parenthesis is "true", this loop will happen forever. </li>
 </ul>
-Play with {{partial 'codr-logo'}}: What would happen if this became "false"?
-
-  
-  
+<p>Play with {{partial 'codr-logo'}}: What would happen if this became "false"?</p>
