--- a/app/templates/content/topic-items/-motion-up-how-it-works.hbs
+++ b/app/templates/content/topic-items/-motion-up-how-it-works.hbs
@@ -10,7 +10,7 @@
   <li>We then use JQuery's css function to update the sprite's coordinates</li>
   </li>
 </ul>
-Play with {{partial 'codr-logo'}}: How can you move down in JavaScript?</br>
-If you would like to replicate Scratch's "glide" try the JQuery animate function.
+<p>Play with {{partial 'codr-logo'}}: How can you move down in JavaScript?<br>
+If you would like to replicate Scratch's "glide" try the JQuery animate function.</p>
 
 
