--- a/app/templates/content/topic-items/-operator-and-how-it-works.hbs
+++ b/app/templates/content/topic-items/-operator-and-how-it-works.hbs
@@ -4,4 +4,4 @@
   <li>The "__ and ___" block in Scratch matches to the  &amp;&amp; operator in JavaScript.</li>
   <li>Like in Scratch this will combine the two things together.</li>
 </ul>
-Note: The  &amp; operator in Javascript is a comparison which does not exist in Scratch.
+<p>Note: The  &amp; operator in Javascript is a comparison which does not exist in Scratch.</p>
