--- a/app/templates/content/topic-items/-event-space-key-how-it-works.hbs
+++ b/app/templates/content/topic-items/-event-space-key-how-it-works.hbs
@@ -8,4 +8,4 @@
 
 <li>Every key on the keyboard has a number in ASCII. The ASCII code for space is the number 32.</li>
 </ul>
-Play with {{partial 'codr-logo'}}: What happens if you change this to a different number?
+<p>Play with {{partial 'codr-logo'}}: What happens if you change this to a different number?</p>
