--- a/app/templates/content/code-snippets/-example1-all.hbs
+++ b/app/templates/content/code-snippets/-example1-all.hbs
@@ -1,5 +1,8 @@
 <pre>
 $(document).ready(function() {
+  // The CSS is responsible for showing sprite
+  // The CSS is responsible for setting location
+  // No need to set a direction for sprite movement
   var $sprite = $('.sprite');
   var xOffset = $sprite.position().left;
   var yOffset = $sprite.position().top;
