--- a/app/templates/content/code-snippets/-example1-snippet1.hbs
+++ b/app/templates/content/code-snippets/-example1-snippet1.hbs
@@ -2,6 +2,9 @@
 $(document).ready(function() {
 </pre>
 <pre>
+  // The CSS is responsible for showing sprite
+  // The CSS is responsible for setting location
+  // No need to set a direction for sprite movement
   var $sprite = $('.sprite');
   var xOffset = $sprite.position().left;
   var yOffset = $sprite.position().top;
