--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -47,7 +47,7 @@ ic-modal {
 }
 
 ic-modal-main {
-  margin-top: 150px;
+  margin-top: 120px;
 }
 
 .try-it-title {
@@ -96,4 +96,19 @@ ic-modal-main {
   &.expand {
     max-height: 250px;
   }
+}
+
+.eval-frame {
+  padding: 35px 0 0 0;
+  border: 0;
+  width: 100%;
+  height: 400px;
+}
+
+.reload {
+  background: url('../images/refresh.png') no-repeat 0 5px;
+  cursor: pointer;
+  width: 20px;
+  height: 32px;
+  text-indent: -9999px;
 }
