--- a/app/templates/topic-item.hbs
+++ b/app/templates/topic-item.hbs
@@ -27,6 +27,7 @@
               </span>
             {{/ic-modal-title}}
             {{view 'topic-item-lab-frame'}}
+            <button class="revert" {{ action revert }}>Undo your changes</button>
           {{/ic-modal}}
         {{/if}}
 
