better min sizing

--- a/app/styles/tutorial.scss
+++ b/app/styles/tutorial.scss
@@ -168,6 +168,7 @@ div.code-snippets {
   min-height: 37px;
 }
 .stage {
+  min-width: 333px;
   margin-left: 251px;
 }
 .code-snippets-topic-type .stage {
