better reload button positioning

--- a/app/styles/widgets.scss
+++ b/app/styles/widgets.scss
@@ -124,6 +124,7 @@ ic-modal-main {
 .revert {
   position:absolute;
   left: 50%;
+  bottom: 13px;
   outline: none;
   cursor: pointer;
   background-color: white;
