--- a/app/templates/home.hbs
+++ b/app/templates/home.hbs
@@ -2,7 +2,7 @@
   <div class="title">
     {{partial 'codr-logo'}}
   </div>
-  <div class="tagline">&lt;moving from Scratch to code made easy and fun&gt;</div>
+  <div class="tagline">&lt;from scratching to coding&gt;</div>
 </div>
 
 <div class="intro-container">
