Fixes #27 added quiz questions

--- a/app/templates/quiz/question2.hbs
+++ b/app/templates/quiz/question2.hbs
@@ -1,19 +1,19 @@
 <div class="question">
-  I consider myself to be an:
+  I primarily want to code to:
 </div>
 <ul class="answers">
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer1">
-    <label for="answer1">Artist</label>
+    <label for="answer1">Communicate with others</label>
   </li>
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer2">
-    <label for="answer2">Gamer</label>
+    <label for="answer2">Build beautiful things</label>
   </li>
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer3">
-    <label for="answer3">Storyteller</label>
+    <label for="answer3">Entertain myself and others</label>
   </li>
 </ul>
 
-<button aria-label="Next" class="next" {{action 'gotoQuestion2'}}>&gt;</button>
+<button aria-label="Next" class="next" {{action 'gotoQuestion3'}}>&gt;</button>
