--- a/app/templates/quiz/question3.hbs
+++ b/app/templates/quiz/question3.hbs
@@ -1,19 +1,19 @@
 <div class="question">
-  I consider myself to be an:
+  A successful program:
 </div>
 <ul class="answers">
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer1">
-    <label for="answer1">Artist</label>
+    <label for="answer1">Is fun for people to use</label>
   </li>
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer2">
-    <label for="answer2">Gamer</label>
+    <label for="answer2">Communicates concepts and visions</label>
   </li>
   <li class="answer-item">
     <input class="answer-input" type="radio" name="quiz" id="answer3">
-    <label for="answer3">Storyteller</label>
+    <label for="answer3">Is artistic and elegant</label>
   </li>
 </ul>
 
-<button aria-label="Next" class="next" {{action 'gotoQuestion2'}}>&gt;</button>
+<button aria-label="Next" class="next" {{action 'gotoResult'}}>&gt;</button>
