added more examples

--- a/app/templates/content/code-snippets/-example1-goto.hbs
+++ b/app/templates/content/code-snippets/-example1-goto.hbs
@@ -1,5 +1,5 @@
 <div>
-This block is used to initialize the position of the sprite. Within Javascript we actually use
+This block is used to initialize the position of the sprite. Within Javascript we use
 the CSS stylesheet to specify the initial position, so we don't actually specify this in Javascript.
 </div>
 
