--- a/app/templates/content/code-snippets/-example1-point.hbs
+++ b/app/templates/content/code-snippets/-example1-point.hbs
@@ -1,5 +1,5 @@
 <div>
   The point block is used in scratch to set the direction of the sprite. This concept doesn't 
-  exists within Javascript, as the direction is implied by the coordinates specified in Javascript.
+  exist within Javascript, as the direction is implied by the coordinates specified in Javascript.
 </div>
 
