--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -56,7 +56,7 @@
 .twitter {
   opacity: .2;
   position: absolute;
-  bottom: -8px;
+  bottom: 0;
   left: 50%;
   margin-left: -80px;
   height: 40px;
